--- a/index.html
+++ b/index.html
@@ -24,7 +24,10 @@
       <span style="font-size:30px;cursor:pointer" class="openbtn" onclick="openNav()">&#9776;</span> 
     </header>
 
-    <video src="images/spill.mp4" muted loop autoplay></video>
+<video poster="/images/poster.png" muted loop autoplay>
+  <source src="/images/spills.mp4" type="video/mp4" />
+  Your browser does not support the video tag.
+</video>
 
     <div class="overlay"></div>
      <div class="text">
